Fixed contrast

--- a/src/index.scss
+++ b/src/index.scss
@@ -79,7 +79,7 @@ VIEW MORE
 
 .button {
   padding: 14px 28px;
-  background: #27b399;
+  background: #186d5d;
   color: rgba(255,255,255,1);
   font-size: 1em;
   line-height: 1.4;
@@ -126,7 +126,7 @@ footer {
   }
 
   .copyright {
-    color: rgba(255,255,255,0.3);
+    color: rgba(255,255,255,0.8);
     font-size: 0.8em;
   }
 }
